test/report/error/__mocks__/err-with-additional-information.mjs
export default {
  modules: [],
  summary: {
    violations: [
      {
        type: "dependency",
        from: "aap",
        to: "noot",
        rule: {
          name: "no-leesplank",
          severity: "warn",
        },
      },
    ],
    error: 0,
    warn: 1,
    info: 0,
    totalCruised: 2,
    optionsUsed: {},
  },
};
